--- a/kong/deck/kong.yaml
+++ b/kong/deck/kong.yaml
@@ -1,6 +1,8 @@
+_format_version: "1.1"
+
 services:
   - name: reqres
-    protocol: https
+    protocol: http
     host: reqres.in
     port: 80
     path: /
@@ -9,7 +11,9 @@ services:
     write_timeout: 60000
     retries: 1
     routes:
-      - name: users
+      - name: reqres
+        methods:
+          - GET
         paths:
           - /
         preserve_host: false
@@ -17,5 +21,14 @@ services:
           - http
           - https
         regex_priority: 0
-        strip_path: false
-        plugins: []
+        strip_path: true
+
+plugins: 
+- name: http-log
+  config:
+    http_endpoint: https://webhook.site/ff74d843-64ec-49f5-b102-6da96ae6912c
+    method: POST
+    timeout: 1000
+    keepalive: 1000
+    flush_timeout: 2
+    retry_count: 15
