--- a/grafana/docker-compose.yml
+++ b/grafana/docker-compose.yml
@@ -1,11 +1,31 @@
 version: "3.8"
 
+networks:
+  grafana-net:
+    driver: bridge
+
 services:
   grafana:
-    image: grafana/grafana:7.2.0
+    image: grafana/grafana-oss:8.2.0
     container_name: grafana
+    volumes:
+      - ./grafana-data:/var/lib/grafana
+    networks: 
+      - grafana-net
     ports:
-      - 3000:3000
-    environment:
-      - GF_INSTALL_PLUGINS=grafana-clock-panel,grafana-simple-json-datasource
+      - "3000:3000"
     restart: "no"
+
+  influxdb:
+    image: influxdb:1.8
+    container_name: grafana-influxdb
+    volumes:
+      - ./influxdb-data:/var/lib/influxdb
+    networks: 
+      - grafana-net
+    ports:
+      - "8083:8083"
+      - "8086:8086"
+      - "25826:25826/udp"      
+
+
