--- a/haproxy/docker-compose.yml
+++ b/haproxy/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.8"
 
 services:
   haproxy:
-    image: haproxy:2.4-alpine
+    image: registry-proxy.flowti.com.br/haproxy:2.6.1-alpine
     container_name: haproxy
     restart: "no"
     ports:
